Cell hover styles

--- a/src/web/scenes/Game/components/World/components/Row/components/Cell/styles.scss
+++ b/src/web/scenes/Game/components/World/components/Row/components/Cell/styles.scss
@@ -6,8 +6,14 @@
 
   border: 1px solid grey;
 
+  cursor: pointer;
+
   &.dead {
     background-color: white;
+
+    &:hover {
+      background-color: red;
+    }
   }
 
   &.alive {
