--- a/src/client/components/Game/components/World/components/Row/components/Cell/styles.scss
+++ b/src/client/components/Game/components/World/components/Row/components/Cell/styles.scss
@@ -1,15 +1,15 @@
 .cell {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
 
   display: table-cell;
 
-  border: 1px solid grey;
+  border: 1px solid white;
 
   cursor: pointer;
 
   &.dead {
-    background-color: white;
+    background-color: #e3e3e3;
 
     &:hover {
       background-color: red;
